--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "angular": "1.4.5",
     "angular-material": "~0.11.0",
+    "angular-route": "~1.4.6",
     "font-awesome": "fontawesome#~4.4.0"
   }
 }
