--- a/bower.json
+++ b/bower.json
@@ -15,8 +15,11 @@
   ],
   "dependencies": {
     "angular": "1.4.5",
-    "angular-material": "~0.11.0",
     "angular-route": "~1.4.6",
-    "font-awesome": "fontawesome#~4.4.0"
+    "bootstrap-material-design": "~0.3.0",
+    "font-awesome": "fontawesome#~4.4.0",
+    "jquery": "~2.1.4",
+    "angular-animate": "~1.4.7",
+    "bootstrap": "~3.3.5"
   }
 }
